tests/parse-fail/expressions_no_unary_plus.rs
fn main() {
    println!("{}", +100);     // error: unexpected `+`
    //~^ ERROR: unexpected token: `+`
}
